src/Skia/Bindings/Gr_context.hs


@
void gr_direct_context_release_resources_and_abandon_context(gr_direct_context_t *context)
@
-}
foreign import ccall "gr_direct_context_release_resources_and_abandon_context" gr_direct_context_release_resources_and_abandon_context ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_release_resources_and_abandon_context'
foreign import ccall "&gr_direct_context_release_resources_and_abandon_context" p'gr_direct_context_release_resources_and_abandon_context ::
  FunPtr (Ptr (Gr_direct_context) -> IO (()))

{- | C function signature:

@
size_t gr_direct_context_get_resource_cache_limit(gr_direct_context_t *context)
@
-}
foreign import ccall "gr_direct_context_get_resource_cache_limit" gr_direct_context_get_resource_cache_limit ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> IO (CSize) -- ^ C return type: @"size_t"@

-- | Function pointer to 'gr_direct_context_get_resource_cache_limit'
foreign import ccall "&gr_direct_context_get_resource_cache_limit" p'gr_direct_context_get_resource_cache_limit ::
  FunPtr (Ptr (Gr_direct_context) -> IO (CSize))

{- | C function signature:

@
void gr_direct_context_set_resource_cache_limit(gr_direct_context_t *context, size_t maxResourceBytes)
@
-}
foreign import ccall "gr_direct_context_set_resource_cache_limit" gr_direct_context_set_resource_cache_limit ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> CSize -- ^ C argument @"size_t maxResourceBytes"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_set_resource_cache_limit'
foreign import ccall "&gr_direct_context_set_resource_cache_limit" p'gr_direct_context_set_resource_cache_limit ::
  FunPtr (Ptr (Gr_direct_context) -> CSize -> IO (()))

{- | C function signature:

@
void gr_direct_context_get_resource_cache_usage(gr_direct_context_t *context, int *maxResources, size_t *maxResourceBytes)
@
-}
foreign import ccall "gr_direct_context_get_resource_cache_usage" gr_direct_context_get_resource_cache_usage ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> Ptr (CInt) -- ^ C argument @"int * maxResources"@
  -> Ptr (CSize) -- ^ C argument @"size_t * maxResourceBytes"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_get_resource_cache_usage'
foreign import ccall "&gr_direct_context_get_resource_cache_usage" p'gr_direct_context_get_resource_cache_usage ::
  FunPtr (Ptr (Gr_direct_context) -> Ptr (CInt) -> Ptr (CSize) -> IO (()))

{- | C function signature:

@
void gr_direct_context_flush(gr_direct_context_t *context)
@
-}
foreign import ccall "gr_direct_context_flush" gr_direct_context_flush ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_flush'
foreign import ccall "&gr_direct_context_flush" p'gr_direct_context_flush ::
  FunPtr (Ptr (Gr_direct_context) -> IO (()))

{- | C function signature:

@
_Bool gr_direct_context_submit(gr_direct_context_t *context, _Bool syncCpu)
@
-}
foreign import ccall "gr_direct_context_submit" gr_direct_context_submit ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> CBool -- ^ C argument @"_Bool syncCpu"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_direct_context_submit'
foreign import ccall "&gr_direct_context_submit" p'gr_direct_context_submit ::
  FunPtr (Ptr (Gr_direct_context) -> CBool -> IO (CBool))

{- | C function signature:

@
void gr_direct_context_flush_and_submit(gr_direct_context_t *context, _Bool syncCpu)
@
-}
foreign import ccall "gr_direct_context_flush_and_submit" gr_direct_context_flush_and_submit ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> CBool -- ^ C argument @"_Bool syncCpu"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_flush_and_submit'
foreign import ccall "&gr_direct_context_flush_and_submit" p'gr_direct_context_flush_and_submit ::
  FunPtr (Ptr (Gr_direct_context) -> CBool -> IO (()))

{- | C function signature:

@
void gr_direct_context_flush_image(gr_direct_context_t *context, const sk_image_t *image)
@
-}
foreign import ccall "gr_direct_context_flush_image" gr_direct_context_flush_image ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_flush_image'
foreign import ccall "&gr_direct_context_flush_image" p'gr_direct_context_flush_image ::
  FunPtr (Ptr (Gr_direct_context) -> Ptr (Sk_image) -> IO (()))

{- | C function signature:

@
void gr_direct_context_flush_surface(gr_direct_context_t *context, sk_surface_t *surface)
@
-}
foreign import ccall "gr_direct_context_flush_surface" gr_direct_context_flush_surface ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> Ptr (Sk_surface) -- ^ C argument @"sk_surface_t * surface"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_flush_surface'
foreign import ccall "&gr_direct_context_flush_surface" p'gr_direct_context_flush_surface ::
  FunPtr (Ptr (Gr_direct_context) -> Ptr (Sk_surface) -> IO (()))

{- | C function signature:

@
void gr_direct_context_reset_context(gr_direct_context_t *context, uint32_t state)
@
-}
foreign import ccall "gr_direct_context_reset_context" gr_direct_context_reset_context ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> Word32 -- ^ C argument @"uint32_t state"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_reset_context'
foreign import ccall "&gr_direct_context_reset_context" p'gr_direct_context_reset_context ::
  FunPtr (Ptr (Gr_direct_context) -> Word32 -> IO (()))

{- | C function signature:

@
void gr_direct_context_dump_memory_statistics(const gr_direct_context_t *context, sk_tracememorydump_t *dump)
@
-}
foreign import ccall "gr_direct_context_dump_memory_statistics" gr_direct_context_dump_memory_statistics ::
  Ptr (Gr_direct_context) -- ^ C argument @"const gr_direct_context_t * context"@
  -> Ptr (Sk_tracememorydump) -- ^ C argument @"sk_tracememorydump_t * dump"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_dump_memory_statistics'
foreign import ccall "&gr_direct_context_dump_memory_statistics" p'gr_direct_context_dump_memory_statistics ::
  FunPtr (Ptr (Gr_direct_context) -> Ptr (Sk_tracememorydump) -> IO (()))

{- | C function signature:

@
void gr_direct_context_free_gpu_resources(gr_direct_context_t *context)
@
-}
foreign import ccall "gr_direct_context_free_gpu_resources" gr_direct_context_free_gpu_resources ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_free_gpu_resources'
foreign import ccall "&gr_direct_context_free_gpu_resources" p'gr_direct_context_free_gpu_resources ::
  FunPtr (Ptr (Gr_direct_context) -> IO (()))

{- | C function signature:

@
void gr_direct_context_perform_deferred_cleanup(gr_direct_context_t *context, long long ms)
@
-}
foreign import ccall "gr_direct_context_perform_deferred_cleanup" gr_direct_context_perform_deferred_cleanup ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> CLLong -- ^ C argument @"long long ms"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_perform_deferred_cleanup'
foreign import ccall "&gr_direct_context_perform_deferred_cleanup" p'gr_direct_context_perform_deferred_cleanup ::
  FunPtr (Ptr (Gr_direct_context) -> CLLong -> IO (()))

{- | C function signature:

@
void gr_direct_context_purge_unlocked_resources_bytes(gr_direct_context_t *context, size_t bytesToPurge, _Bool preferScratchResources)
@
-}
foreign import ccall "gr_direct_context_purge_unlocked_resources_bytes" gr_direct_context_purge_unlocked_resources_bytes ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> CSize -- ^ C argument @"size_t bytesToPurge"@
  -> CBool -- ^ C argument @"_Bool preferScratchResources"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_purge_unlocked_resources_bytes'
foreign import ccall "&gr_direct_context_purge_unlocked_resources_bytes" p'gr_direct_context_purge_unlocked_resources_bytes ::
  FunPtr (Ptr (Gr_direct_context) -> CSize -> CBool -> IO (()))

{- | C function signature:

@
void gr_direct_context_purge_unlocked_resources(gr_direct_context_t *context, _Bool scratchResourcesOnly)
@
-}
foreign import ccall "gr_direct_context_purge_unlocked_resources" gr_direct_context_purge_unlocked_resources ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> CBool -- ^ C argument @"_Bool scratchResourcesOnly"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_purge_unlocked_resources'
foreign import ccall "&gr_direct_context_purge_unlocked_resources" p'gr_direct_context_purge_unlocked_resources ::
  FunPtr (Ptr (Gr_direct_context) -> CBool -> IO (()))

{- | C function signature:

@
const gr_glinterface_t *gr_glinterface_create_native_interface(void)
@
-}
foreign import ccall "gr_glinterface_create_native_interface" gr_glinterface_create_native_interface ::
  IO (Ptr (Gr_glinterface)) -- ^ C return type: @"const gr_glinterface_t *"@

-- | Function pointer to 'gr_glinterface_create_native_interface'
foreign import ccall "&gr_glinterface_create_native_interface" p'gr_glinterface_create_native_interface ::
  FunPtr (IO (Ptr (Gr_glinterface)))

{- | C function signature:

@
const gr_glinterface_t *gr_glinterface_assemble_interface(void *ctx, gr_gl_get_proc get)
@
-}
foreign import ccall "gr_glinterface_assemble_interface" gr_glinterface_assemble_interface ::
  Ptr (()) -- ^ C argument @"void * ctx"@
  -> FunPtr Gr_gl_get_proc -- ^ C argument @"gr_gl_get_proc get"@
  -> IO (Ptr (Gr_glinterface)) -- ^ C return type: @"const gr_glinterface_t *"@

-- | Function pointer to 'gr_glinterface_assemble_interface'
foreign import ccall "&gr_glinterface_assemble_interface" p'gr_glinterface_assemble_interface ::
  FunPtr (Ptr (()) -> FunPtr Gr_gl_get_proc -> IO (Ptr (Gr_glinterface)))

{- | C function signature:

@
const gr_glinterface_t *gr_glinterface_assemble_gl_interface(void *ctx, gr_gl_get_proc get)
@
-}
foreign import ccall "gr_glinterface_assemble_gl_interface" gr_glinterface_assemble_gl_interface ::
  Ptr (()) -- ^ C argument @"void * ctx"@
  -> FunPtr Gr_gl_get_proc -- ^ C argument @"gr_gl_get_proc get"@
  -> IO (Ptr (Gr_glinterface)) -- ^ C return type: @"const gr_glinterface_t *"@

-- | Function pointer to 'gr_glinterface_assemble_gl_interface'
foreign import ccall "&gr_glinterface_assemble_gl_interface" p'gr_glinterface_assemble_gl_interface ::
  FunPtr (Ptr (()) -> FunPtr Gr_gl_get_proc -> IO (Ptr (Gr_glinterface)))

{- | C function signature:

@
const gr_glinterface_t *gr_glinterface_assemble_gles_interface(void *ctx, gr_gl_get_proc get)
@
-}
foreign import ccall "gr_glinterface_assemble_gles_interface" gr_glinterface_assemble_gles_interface ::
  Ptr (()) -- ^ C argument @"void * ctx"@
  -> FunPtr Gr_gl_get_proc -- ^ C argument @"gr_gl_get_proc get"@
  -> IO (Ptr (Gr_glinterface)) -- ^ C return type: @"const gr_glinterface_t *"@

-- | Function pointer to 'gr_glinterface_assemble_gles_interface'
foreign import ccall "&gr_glinterface_assemble_gles_interface" p'gr_glinterface_assemble_gles_interface ::
  FunPtr (Ptr (()) -> FunPtr Gr_gl_get_proc -> IO (Ptr (Gr_glinterface)))

{- | C function signature:
